--- a/test/output/test.html
+++ b/test/output/test.html
@@ -1,23 +1,23 @@
 <html>
-	<title>Ampersandia</title>
+	<head>
+		<title>Ampersandia - Welcome To Ampersandia</title>
+	</head>
 	<body>
+		<header>
+			<span id='logo'>&</span>
+		</header>
 		<section>
-			<hgroup>
-				<h1>Kismesis showcase</h1>
-				<p>A page generated utilizing all of Kismesis' features</p>
-			</hgroup>
-			<section>
-				<h1>Simple HTML</h1>
-				<p>This entire page utilizes simple HTML from kismesis, <a href='not yet sorry'>click here</a> to see the source code</p>
-			</section>
-			<section>
-				<h1>Macros</h1>
-				<p>Macros are one of the ways to make repeated content less tiresome to write. If you do something a lot, simply turn it into a macro!</p>
-			</section>
-			<section>
-				<h1>Templates</h1>
-				<p>Templates are files whose content is meant to be repeated across many files, such as this page's header and footer</p>
-			</section>
+			<h1>Welcome To Ampersandia</h1>
+			<p>After some walking, you had begun feeling like the world was... repeating on itself, somehow, but alas, you finally found signs of civilization: A city, surrounded by an unnaturally steep cliff which plateau'd the closer it got to the west. The sun was outshined by a bright tower in a distant desert, but this new light was not blinding; all the contrary, it was scarily comforting. It was going to be a weird descent.</p>
+			<p>We are <a class='h-card' href='https://ampersandia.net/' rel='me'>The & System</a>, a system of about 40 alters. In this website you'll see our works of art. If you have no idea what a system means in this context, this link has useful information. When pretending we're one single person, we go by Katie &, and our pronouns are she/her and they/them. Our works contain mentions of a lot of dark topics, it's hard to properly CW them all accurately. But we're working on it.</p>
+			<nav>
+				<ul>
+					<li><a href='roxy.html'>Roxy (she/her)</a></li>
+					<li><a href='ash.html'>Ash (she/her)</a></li>
+					<li><a href='sariko.html'>Niko and Venus' vent art</a></li>
+					<li><a href='blog.html'>Our blog</a></li>
+				</ul>
+			</nav>
 		</section>
 	</body>
 </html>
