--- a/test/output/test.html
+++ b/test/output/test.html
@@ -1,5 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang='en-US'>
 	<head>
+		<meta name='viewport' content='width=device-width, initial-scale=1'>
+		<meta charset='utf-8'>
 		<title>Ampersandia - Welcome To Ampersandia</title>
 	</head>
 	<body>
