--- a/test/output/test.html
+++ b/test/output/test.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang='en-US'>
 	<head>
+		<link href='/style.css' rel='stylesheet' type='text/css' media='all'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
 		<meta charset='utf-8'>
 		<title>Ampersandia - Welcome To Ampersandia</title>
