Added <for> tags

--- a/test/output/test.html
+++ b/test/output/test.html
@@ -4,24 +4,20 @@
 		<link href='/style.css' rel='stylesheet' type='text/css' media='all'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
 		<meta charset='utf-8'>
-		<title>Ampersandia - Welcome To Ampersandia</title>
+
+		<title>asdfsadf</title>
+
+
 	</head>
 	<body>
 		<header>
 			<span id='logo'>&</span>
 		</header>
-		<section>
-			<h1>Welcome To Ampersandia</h1>
-			<p>After some walking, you had begun feeling like the world was... repeating on itself, somehow, but alas, you finally found signs of civilization: A city, surrounded by an unnaturally steep cliff which plateau'd the closer it got to the west. The sun was outshined by a bright tower in a distant desert, but this new light was not blinding; all the contrary, it was scarily comforting. It was going to be a weird descent.</p>
-			<p>We are <a class='h-card' href='https://ampersandia.net/' rel='me'>The & System</a>, a system of about 40 alters. In this website you'll see our works of art. If you have no idea what a system means in this context, this link has useful information. When pretending we're one single person, we go by Katie &, and our pronouns are she/her and they/them. Our works contain mentions of a lot of dark topics, it's hard to properly CW them all accurately. But we're working on it.</p>
-			<nav>
-				<ul>
-					<li><a href='roxy.html'>Roxy (she/her)</a></li>
-					<li><a href='ash.html'>Ash (she/her)</a></li>
-					<li><a href='sariko.html'>Niko and Venus' vent art</a></li>
-					<li><a href='blog.html'>Our blog</a></li>
-				</ul>
-			</nav>
-		</section>
+		
+		Lorem ipsum dolor asdfsadf amet
+		
+		
+		<p>hi</p>
+		<p>hewwo</p>
 	</body>
 </html>
